# the-associate-studio

./: .gitignore  CLAUDE.md  LICENSE  README.md  build.ps1  index.html  install.ps1  package-lock.json  package.json  plan.md  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
.github/: FUNDING.yml
.github/workflows/: claude-code-review.yml  claude.yml  pr-build.yml  release.yml  remote-run.yml  scheduled-remote-run.yml
docs/: CNAME  architecture.md  branding.md  bug-report-backend.md  bug-report-frontend.md  build.md  data-formats.md  dead-code-report.md  index.md  integrations.md  keybindings.md  remote-run.md  security.md  tech-stack.md  terminal.md  testing.md  theming.md
docs/research/: ARCHITECTURE-DRAFT.md  ARCHITECTURE-SPEC.md  cli-integration.md  data-formats.md  tech-stack.md  ux-design.md
scripts/: bump-version.js
site/: index.html
site/docs/: architecture.html  features.html  getting-started.html  index.html  (+2 more)
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: installer-hooks.nsh
src-tauri/src/: cleanup.rs  lib.rs  main.rs  startup.rs  utils.rs
src-tauri/src/commands/: app_info.rs  claude_config.rs  files.rs  git.rs  hooks.rs  inbox.rs  integrations.rs  issues.rs  mod.rs  notes.rs  plan_links.rs  plans.rs  projects.rs  pty.rs  remote_run.rs  sessions.rs  summaries.rs  task_snapshots.rs  tasks.rs  teams.rs  todos.rs  workflows.rs
src-tauri/src/data/: claude_config.rs  git.rs  hook_state.rs  inboxes.rs  mod.rs  notes.rs  path_encoding.rs  plans.rs  projects.rs  sessions.rs  summaries.rs  task_snapshots.rs  tasks.rs  teams.rs  todos.rs  transcripts.rs  watcher_state.rs
src-tauri/src/models/: claude_config.rs  git.rs  hook_event.rs  inbox.rs  mod.rs  note.rs  plan.rs  session.rs  summary.rs  task.rs  task_snapshot.rs  team.rs  todo.rs  transcript.rs
src-tauri/src/watcher/: claude_watcher.rs  git_watcher.rs  mod.rs
tools/: migrate-storage.ps1
(+87 files in other folders)
