[package]
name = "the-associate-studio"
version = "0.1.0"
description = "The Associate Studio — a lightweight Windows IDE where Claude Code CLI is the centerpiece"
authors = ["you"]
edition = "2021"

[lib]
name = "the_associate_studio_lib"
crate-type = ["staticlib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
notify = "8"
git2 = "0.20"
portable-pty = "0.8"
reqwest = { version = "0.12", features = ["json"] }
open = "5"
keyring = "3"
rfd = "0.14"
