[package]
name = "the-associate-studio"
version = "0.4.3"
description = "The Associate Studio — a lightweight Windows IDE where Claude Code CLI is the centerpiece"
authors = ["you"]
edition = "2021"

[lib]
name = "the_associate_studio_lib"
crate-type = ["staticlib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
notify = "8"
git2 = "0.20"
portable-pty = "0.8"
reqwest = { version = "0.12", features = ["json"] }
open = "5"
keyring = { version = "3", features = ["windows-native"] }
rfd = "0.14"
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_UI_Shell",
    "Win32_UI_Shell_PropertiesSystem",
] }
